--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body {
     font-family: "Roboto", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: normal;
+    margin: 0px;
 }
 
 header, .intro, footer {
@@ -8,12 +13,24 @@ header, .intro, footer {
 
 header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
 }
 
 h1 {
     font-weight: 900;
     font-size: 48px;
     color: #F9FAF8;
+    margin: 0;
+    margin-bottom: 1px;
+}
+
+.header-nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 10px;
 }
 
 .header-link, .description {
@@ -27,6 +44,7 @@ h1 {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 900;
+    align-items: flex-start;
 }
 
 h2 {
@@ -35,7 +53,7 @@ h2 {
     font-weight: 900;
 }
 
-.box {
+.boximage {
     border-radius: 10%;
     border: 4px solid #3882f6;
     width: 200px;
@@ -44,6 +62,10 @@ h2 {
 
 .testimonial {
     background-color: #E5E7EB;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .quote {
@@ -55,11 +77,21 @@ h2 {
 
 .author {
     font-weight: 1000;
+    margin-top: 10px;
+    align-self:last baseline
+    
 }
 
 .cta {
     background-color: #3882f6;
+    border-radius: 1%;
+    border: 4px solid #3882f6;
     color: white;
+    margin: 30px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 p {
@@ -79,6 +111,7 @@ button {
     height: 30px;
     border-radius: 5px;
     border: 0px;
+    margin-top: 10px;
 }
 
 #button-cta {
@@ -87,4 +120,52 @@ button {
 
 footer {
     color: white;
+}
+
+.intro {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+}
+
+.left {
+    width: 400px;
+}
+
+#intro-image {
+    width: 400px;
+    height: 200px;
+    border-radius: 1%;
+    border: 4px solid #E5E7EB;
+}
+
+.random-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.boxes {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.subtext {
+    width: 200px;
+    text-align: center;
+}
+
+footer {
+    padding: 10px;
+    text-align: center;
 }
